<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchDestinationRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/search_component_margin_horizontal"
    android:layout_marginEnd="@dimen/search_component_margin_horizontal"
    android:layout_marginTop="@dimen/search_component_margin_top"
    android:background="@drawable/search_container_background"
    android:paddingStart="@dimen/search_container_horizontal_padding"
    android:paddingEnd="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:minHeight="@dimen/search_container_height"
    android:clickable="true"
    android:focusable="true"
    android:contentDescription="@string/search_container_content_desc">

    <ImageView
        android:id="@+id/ivSearchIcon"
        android:layout_width="@dimen/search_container_icon_size"
        android:layout_height="@dimen/search_container_icon_size"
        android:contentDescription="@string/search_container_content_desc"
        android:src="@drawable/ic_search_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvSearchPlaceholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/search_container_spacing"
        android:text="@string/search_placeholder"
        android:textColor="@color/search_placeholder_text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ivSearchIcon"
        app:layout_constraintEnd_toStartOf="@id/btnFilter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:maxLines="1"
        android:ellipsize="end"/>

    <FrameLayout
        android:id="@+id/btnFilter"
        android:layout_width="@dimen/search_filter_button_size"
        android:layout_height="@dimen/search_filter_button_size"
        android:layout_marginStart="8dp"
        android:background="@drawable/search_filter_background"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/search_filter_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/ivFilterIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:tint="@color/search_filter_icon_tint"
            android:src="@drawable/ic_filter_list_24"
            android:contentDescription="@string/search_filter_content_desc" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
